--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "nunjucks": "^3.2.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
